changes for verison 1.1